# NCSRobotLib

./: .gitignore  CMakeLists.txt  README.md  SequenceLearning.cpp
ebv_visu/: CMakeLists.txt  CMakeLists.txt.user.149565f  README.txt
ebv_visu/Applications/: CMakeLists.txt
ebv_visu/Applications/testDataSender/: CMakeLists.txt
ebv_visu/Applications/testDataSender/src/: main.cpp
ebv_visu/Applications/testVisualizer/: CMakeLists.txt
ebv_visu/Applications/testVisualizer/include/: EBV_PosePlugin.h
ebv_visu/Applications/testVisualizer/src/: EBV_PosePlugin.cpp  main.cpp
ebv_visu/BuildLinux/: CMakeCache.txt  EBV_VISU_PROJECT.cbp  Makefile  cmake_install.cmake  ebv_uninstall.cmake
ebv_visu/BuildLinux/Applications/: Makefile  cmake_install.cmake
ebv_visu/BuildLinux/Applications/testDataSender/: Makefile  cmake_install.cmake  ebv-testDataSender.cbp  ebv-testDataSender.ilk
ebv_visu/BuildLinux/Applications/testVisualizer/: Makefile  cmake_install.cmake  ebv-testVisualizer.cbp  ebv-testVisualizer.ilk
ebv_visu/BuildLinux/Applications/testVisualizer/ebv-testVisualizer_autogen/: moc_compilation.cpp
ebv_visu/BuildLinux/Modules/: Makefile  cmake_install.cmake
ebv_visu/BuildLinux/Modules/visualizer/: Makefile  cmake_install.cmake  ebv-visualizer.cbp  ebv-visualizer.lib
ebv_visu/BuildLinux/Modules/visualizer/ebv-visualizer_autogen/: moc_compilation.cpp
ebv_visu/BuildMac/: CMakeCache.txt  Makefile  cmake_install.cmake  ebv_uninstall.cmake
ebv_visu/BuildMac/Applications/: Makefile  cmake_install.cmake
ebv_visu/BuildMac/Applications/testDataSender/: Makefile  cmake_install.cmake  ebv-testDataSender
ebv_visu/BuildMac/Applications/testVisualizer/: Makefile  cmake_install.cmake  ebv-testVisualizer  ebv-testVisualizer_automoc.cpp
ebv_visu/BuildMac/Modules/: Makefile  cmake_install.cmake
ebv_visu/BuildMac/Modules/visualizer/: Makefile  cmake_install.cmake  ebv-visualizer_automoc.cpp
ebv_visu/CMakeModules/: EBV_ProjectConfig.h.cmake  ebv_project_app.cmake  ebv_project_module.cmake
ebv_visu/CMakeModules/CMakeInclude/: EBV_ProjectConfig.h
ebv_visu/Modules/: CMakeLists.txt
ebv_visu/Modules/visualizer/: CMakeLists.txt
ebv_visu/Modules/visualizer/include/: EBV_Visualizer.h
ebv_visu/Modules/visualizer/src/: EBV_Visualizer.cpp
ebv_visu/Text/Optim Manifold/: OptimizationManifold.c  OptimizationManifold.xlsx
ebv_visu/Text/Quadratics/: LDLDecomp.mw  Quadratic2Gaussian.ggb  Quadratic2Gaussian.mw
sequence_learning/: .cproject  .project  CMakeLists.txt  README.md  draw_architecture.cpp  main.cpp  push_to_parallella.sh  update_parallella.sh
sequence_learning/NCSRobotLib/: CMakeLists.txt  README.md
sequence_learning/NCSRobotLib/include/: EDVSDevice.h  EDVSEventSynchronizer.h  EDVSListener.h  EDVSListener_DisplayEvents.h  EDVSListener_UDP.h  PlasticSynapses.h  PushBot.h  ROLLSArchitecture.h  ROLLSDevice.h  ROLLSListener.h  ROLLSListener_Log.h  ROLLSListener_UDP.h  Robot.h  RobotListener.h  RobotListener_UDP.h  TerminalInputDevice.h  TerminalInputListener_Drive.h  TerminalListener.h  UDPCommunication.h  USBConnector.h  mainpage.dox
sequence_learning/NCSRobotLib/paex-dist-cc/communication/: Makefile  a.out  comunication.c
sequence_learning/NCSRobotLib/paex-dist-cc/communication/aertest/: Makefile  aertest  (+1 more)
sequence_learning/NCSRobotLib/paex-dist-cc/server/: Makefile  server.c
sequence_learning/NCSRobotLib/paex-dist-cc/server_new/: Makefile  gino_riparte.sh  pino_riparte.sh  prova.c  servermon_multiclient  servermon_multiclient.c  servermon_multiclient_tmp.c  servermon_singleclient.c  serversec.c  serversec_multiclient  serversec_multiclient.c  serversec_multiclient.c_rotto
sequence_learning/NCSRobotLib/src/: EDVSDevice.cpp  EDVSEventSynchronizer.cpp  EDVSListener_UDP.cpp  PlasticSynapses.cpp  PushBot.cpp  ROLLSArchitecture.cpp  ROLLSDevice.cpp  ROLLSListener_UDP.cpp  Robot.cpp  RobotListener_Log.cpp  RobotListener_UDP.cpp  TerminalInputDevice.cpp  TerminalInputListener_Drive.cpp  UDPCommunication.cpp
sequence_learning/include/: SequenceLearning.h
sequence_learning/plotting/plotting/: Basic Obstacle Avoidance 2.ipynb  Basic Obstacle Avoidance.ipynb  Compare intervals.ipynb  Demo.ipynb  README.md  Shifted Cup.ipynb  Target Acquisition.ipynb  Visualize logs.ipynb  fetch_logs.sh  time series.ipynb  tuning.ipynb
sequence_learning/plotting/plotting/.ipynb_checkpoints/: Demo-checkpoint.ipynb
sequence_learning/plotting/plotting/logs/: 27cab_20170131T143331_edvs.csv  27cab_20170131T143331_imu.csv  27cab_20170131T143331_rolls.csv  27cab_20170131T143604_rolls.csv  AAC2_20170131T214908_rolls.csv  AAC_20170131T214732_rolls.csv  ABC_to_ACC_20170131T220538_rolls.csv  ACA14_20170201T053402_edvs.csv  ACA14plastic_20170201T053928_edvs.csv  ACA14plastic_20170201T053928_rolls.csv  ACA14plastic_20170201T054046_edvs.csv  ACA14plastic_20170201T054046_rolls.csv  ACA14plastic_20170201T054148_edvs.csv  ACA14plastic_20170201T054148_rolls.csv  ACA27_20170131T202221_edvs.csv  ACA27_20170131T202221_rolls.csv  ACA27plastic_20170131T202706_edvs.csv  ACA27plastic_20170131T202706_rolls.csv  BAC14_20170201T061501_rolls.csv  BAC14_2plastic2_20170201T062506_edvs.csv  BAC14_2plastic2_20170201T062506_rolls.csv  BAC14_2plastic_20170201T062355_edvs.csv  BAC14_2plastic_20170201T062355_rolls.csv  CAA14_20170201T052546_edvs.csv  CAA2_20170131T214747_rolls.csv  CAA_20170131T213909_rolls.csv  CAAplastic_20170131T214400_edvs.csv  CAAplastic_20170131T214400_rolls.csv  CAB_20170131T193844_edvs.csv  CAB_20170131T193844_rolls.csv  CAB_plastic_20170131T194319_edvs.csv  CAB_plastic_20170131T194319_rolls.csv  CBA27_1_20170131T203418_edvs.csv  CBA27_1_20170131T203418_rolls.csv  CBA27_1plusCCC_20170131T203755_edvs.csv  CBA27_1plusCCC_20170131T203755_rolls.csv  CCA_20170131T212836_rolls.csv  aab_20170131T151818_rolls.csv  abc2_3_20170131T214224_rolls.csv  abc2_3_neu_20170131T214543_rolls.csv  (+38 more)
sequence_learning/plotting/plotting/utils/: defaults.py  experiment.py  plotting.py
sequence_learning/plotting/plotting/videos/: only_combine.sh  superimpose.sh
sequence_learning/src/: plastic.txt  wij.json  wij.txt
(+461 files in other folders)
