#------------------------------------------------------------
#
#  Applications CMake file for EBV_VISU
#
#  initial version: jmartel@ethz.ch
#
#------------------------------------------------------------

#LAUNCH CMAKE IN SUBDIRECTORIES-------------------------------
add_subdirectory(testDataSender)
add_subdirectory(testVisualizer)
#-------------------------------------------------------------
